--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,14 +1,17 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Managefiles</title>
-    <%= csrf_meta_tags %>
+%html
+%head
+  %title ManageFile | Your life's work!
+  = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
+  = javascript_include_tag 'application', 'data-turbolinks-track' => true
+  = csrf_meta_tags
+%body
+  %header
+    .header_inner
+      = link_to " ManageFile ", root_path, id: "logo"
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
+      
+  %p.notice= notice
+  %p.alert= alert
 
-  <body>
-    <%= yield %>
-  </body>
-</html>
+  = yield
+
